--- a/pom.xml
+++ b/pom.xml
@@ -1,57 +1,70 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>loadgen</groupId>
+
+  <groupId>com.cliffberg</groupId>
   <artifactId>loadgen-java</artifactId>
-  <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
   <name>loadgen-java</name>
   <url>http://maven.apache.org</url>
+  <packaging>jar</packaging>
+
   <dependencies>
+
     <dependency>
       <groupId>org.jbehave</groupId>
       <artifactId>jbehave-core</artifactId>
       <version>3.9</version>
     </dependency>
+
   </dependencies>
+
   <build>
-  	<pluginManagement>
-		<plugins>
+
+      <sourceDirectory>${basedir}/src/main/java</sourceDirectory>
+      <scriptSourceDirectory>${basedir}/src/main/scripts</scriptSourceDirectory>
+      <testSourceDirectory>${basedir}/src/test/java</testSourceDirectory>
+      <outputDirectory>${basedir}/target/classes</outputDirectory>
+      <testOutputDirectory>${basedir}/target/test-classes</testOutputDirectory>
+
+	  <plugins>
+
 		  <plugin>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
 		  </plugin>
+
 		  <plugin>
 			<groupId>org.apache.maven.plugins</groupId>
 			<artifactId>maven-compiler-plugin</artifactId>
 			<version>3.2</version>
 			<configuration>
-			  <source>1.8</source>
-			  <target>1.8</target>
+			  <source>14</source>
+			  <target>14</target>
 			</configuration>
 		  </plugin>
-		</plugins>
-    </pluginManagement>
-    <sourceDirectory>${basedir}/src/main/java</sourceDirectory>
-    <scriptSourceDirectory>${basedir}/src/main/scripts</scriptSourceDirectory>
-    <testSourceDirectory>${basedir}/src/test/java</testSourceDirectory>
-    <outputDirectory>${basedir}/target/classes</outputDirectory>
-    <testOutputDirectory>${basedir}/target/test-classes</testOutputDirectory>
+
+		  <plugin>
+			  <groupId>org.apache.maven.plugins</groupId>
+			  <artifactId>maven-toolchains-plugin</artifactId>
+			  <version>1.1</version>
+			  <executions>
+				  <execution>
+					  <phase>validate</phase>   <!-- check -->
+					  <goals>
+						  <goal>toolchain</goal>
+					  </goals>
+				  </execution>
+			  </executions>
+			  <configuration>
+				  <toolchains><jdk><version>14</version></jdk></toolchains>
+			  </configuration>
+		  </plugin>
+
+	  </plugins>
+
   </build>
-  <distributionManagement>
-  	<repository>
-  		<uniqueVersion>false</uniqueVersion>
-  		<id>archiva.internal</id>
-  		<name>Local Repository Manager</name>
-  		<url>http://localhost:8080/repository/internal/</url>
-  		<layout>default</layout>
-  	</repository>
-  	<snapshotRepository>
-  		<uniqueVersion>true</uniqueVersion>
-  		<id>archiva.snapshots</id>
-  		<name>Loadgen Snapshots</name>
-  		<url>http://localhost:8080/repository/snapshots/</url>
-  		<layout>legacy</layout>
-  	</snapshotRepository>
-  </distributionManagement>
+
 </project>
