--- a/common/pom.xml
+++ b/common/pom.xml
@@ -2,13 +2,13 @@
 
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>common</artifactId>
+	<artifactId>loadgen-common</artifactId>
 	<version>1.0</version>
 	<name>common</name>
 	<packaging>jar</packaging>
 
 	<parent>
-		<groupId>com.cliffberg</groupId>
+		<groupId>com.cliffberg.loadgen</groupId>
 		<artifactId>loadgen</artifactId>
 		<version>1.0</version>
 	</parent>
